k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: careerscrape-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - careerscrape.com
        - www.careerscrape.com
      secretName: careerscrape-tls
  rules:
    - host: careerscrape.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: careerscrape-web-service
                port:
                  number: 80
    - host: www.careerscrape.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: careerscrape-web-service
                port:
                  number: 80
